bom dia nelip feto

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="font" href="fonts/zh-cn.ttf">
   <link rel="shortcut icon" href="https://static-00.iconduck.com/assets.00/games-genshinimpact-icon-512x512-pb3mtbqm.png" type="image/x-icon">
   <title> Genshin Impact </title>
 </head>
@@ -26,11 +27,13 @@
       </div>
     </footer>
 
+    <!-- de verdade aqui eu queria botar tipo um carrosel tlgd pra ir clicando e ir mudando -->
     <div class="news">
       <h1> Ultimas Novidades </h1>
+      <br>
       <div class="newspaper">
         <img src="img/4ponto5.webp" alt="4.5">
-        <p class="newtext">
+        <p>
           Nova personagem 5 estrelas: <strong>Chiori</strong> <br>
           Também no Banner: <strong>Arataki Itto</strong> <br>
           Próxima Rotação: <strong>Kazuha</strong> e <strong>Neuvilette</strong>!
@@ -39,7 +42,7 @@
 
       <div class="newspaper">
         <img src="img/evento.webp" alt="evento">
-        <p class="newtext">
+        <p>
           Novo evento: <strong>Ascensção Alquímica</strong>
         </p>
     </div>
