--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="back"> <!-- so pra poder centralizar as paradas -->
     
-    <footer class="footer">
+    <header class="footer">
       <div class="login">
         <img src="img/dev.png" alt="feito por">
         <img src="img/user.png" alt="login">
@@ -25,7 +25,7 @@
         <img src="img/search.png" alt="search">
         <img src="img/menu.png" alt="menu">
       </div>
-    </footer>
+    </header>
 
     <!-- de verdade aqui eu queria botar tipo um carrosel tlgd pra ir clicando e ir mudando -->
     <div class="news">
