--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           Próxima Rotação: <strong>Kazuha</strong> e <strong>Neuvilette</strong>!
         </p>
       </div>
-
+      
       <div class="newspaper">
         <div>
         <img src="img/evento.webp" alt="evento">
@@ -64,6 +64,13 @@
           Novo evento: <strong>Ascensção Alquímica</strong>
         </p>
       </div>
+    </div>
+  </div>
+    <div class="bg2">
+      <p></p>
+
+
+
     </div>
 </body>
 
